Fix flash of overflow for Xterm

--- a/services/orchest-webserver/app/static/css/main.scss
+++ b/services/orchest-webserver/app/static/css/main.scss
@@ -466,6 +466,7 @@ p > i.material-icons.float-left {
 .xterm-holder {
   background: #000;
   padding: 5px;
+  overflow: hidden;
 }
 
 .build-notice {
